@startuml
class com.example.myfinalproject.FirstActivity {
- ProgressBar progressBar
- TextView tvLoading
- int progressStatus
# void onCreate(Bundle)
- void animateImageView(ImageView)
}


class com.example.myfinalproject.MainActivity {
- DrawerLayout drawerLayout
- PasswordResetHandler passwordResetHandler
+ void updateNavigationHeader()
# void onCreate(Bundle)
+ boolean onNavigationItemSelected(MenuItem)
+ void onBackPressed()
# void onStart()
# void onStop()
}




androidx.appcompat.app.AppCompatActivity <|-- com.example.myfinalproject.FirstActivity
com.example.myfinalproject.OnNavigationItemSelectedListener <|.. com.example.myfinalproject.MainActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.myfinalproject.MainActivity
@enduml